<?xml version="1.0"?>
<package>
  <name>dynamic_turtle_speed_ros</name>
  <version>0.0.0</version>
  <description>The dynamic_turtle_speed_ros package</description>
<maintainer email="alessandro@todo.todo">alessandro</maintainer>
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>
 <run_depend>rospy</run_depend>
 <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
